# tinyscraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
src/tinyscraper/: __init__.py  api.py  cli.py  items.py  models.py  pipelines.py  settings.py  types.py
src/tinyscraper/spiders/: __init__.py  tinyboard.py
tests/spiders/: test_tinyboard.py
