[project]
name = "tinyscraper"
version = "0.1.0"
authors = [{ name="Wren C. Kuratana", email="wrenkuratana@gmail.com" }]
description = "A package designed to help with scraping post data from imageboards built using Tinyboard."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "logging>=0.4.9.6",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "scrapy>=2.13.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "tests",
]

[project.scripts]
tinyscraper = "tinyscraper.cli:main"